objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Acquisitions__c</fullName>
        <label>Acquisitions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alfresco_Create_Date__c</fullName>
        <description>Alfresco Content Creation Date. Format for date is yyyy-mm-dd hh:mm:ss.</description>
        <inlineHelpText>Alfresco Creation Date</inlineHelpText>
        <label>Alfresco Create Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alfresco_Org_Version__c</fullName>
        <description>Alfresco Original  content version number.</description>
        <label>Alfresco Org Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alfresco_Version__c</fullName>
        <description>Alfresco DBS Content version number</description>
        <label>Alfresco Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Architectures__c</fullName>
        <label>Architectures</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audience_Security__c</fullName>
        <description>Audience and access levels allowed to view content item.</description>
        <inlineHelpText>Content's access level</inlineHelpText>
        <label>Audience / Security</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Author_Group__c</fullName>
        <description>Alfresco Author Group. The Author group / creator of the content item.</description>
        <inlineHelpText>Author group or creator of the content item</inlineHelpText>
        <label>Author Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Buyer_Type_Additional_Info_1__c</fullName>
        <label>Buyer Type Additional Info 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Buyer_Type__c</fullName>
        <description>The Buyer Type(s) associated to the content item.</description>
        <inlineHelpText>Associated Buyer Type(s)</inlineHelpText>
        <label>Buyer Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certified__c</fullName>
        <description>Alfresco indicator that signifies that the content is Certified.</description>
        <label>Certified</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitive__c</fullName>
        <label>Competitive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Archive__c</fullName>
        <description>Alfresco's value that Indicates the length of  the content item should be retained.</description>
        <label>Content Archive</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Content_Types__c</fullName>
        <label>Content Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Alfresco's country and language code for the content item.</description>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Method_Additional_Info_1__c</fullName>
        <label>Delivery Method Additional Info 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Doc_ID__c</fullName>
        <description>The Alfresco unique identifier for the content.</description>
        <inlineHelpText>Alfresco Document ID</inlineHelpText>
        <label>Doc ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DownloadCount__c</fullName>
        <label>DownloadCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Formula__c</fullName>
        <formula>DATEVALUE(LEFT(Expiration_Date__c, 10))</formula>
        <label>Expiration Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Alfresco content expiration date for when the content should be deleted in Salesforce. Format for date is yyyy-mm-dd hh:mm:ss</description>
        <inlineHelpText>Deletion Date</inlineHelpText>
        <label>Expiration Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geo_Region__c</fullName>
        <description>The associated GEO / Region for the content item.</description>
        <label>Geo / Region</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Type_Additional_Info_1__c</fullName>
        <label>Industry Type Additional Info 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Type_Additional_Info_2__c</fullName>
        <label>Industry Type Additional Info 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Type__c</fullName>
        <description>The Industry associated to the content item</description>
        <label>Industry Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Machine_Generated_Tags_Additional_Info_1__c</fullName>
        <label>Machine Generated Tags Additional Info 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Machine_Generated_Tags_Additional_Info_2__c</fullName>
        <label>Machine Generated Tags Additional Info 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Machine_Generated_Tags__c</fullName>
        <description>Tags or keywords generated from the Alfresco for the content item.</description>
        <label>Machine Generated Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market_Industry_Trend__c</fullName>
        <label>Market Industry Trend</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offering_Additional_Info_1__c</fullName>
        <label>Offering Additional Info 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offering_Additional_Info_2__c</fullName>
        <label>Offering Additional Info 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offering_Category__c</fullName>
        <description>The overall category for the Product, Service, Solution, and/or Architectures associated with the content item.</description>
        <label>Offering Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <description>Identifies the Product, Service, Solution, and/or Architectures associated with the content item. Offering will contain 4 child tags that will be combined into this field.</description>
        <inlineHelpText>Associated Product, Service, Solution, and/or Architectures</inlineHelpText>
        <label>Offering</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PID__c</fullName>
        <description>The Alfresco unique identifier for Product(s) that are associated to the content item.</description>
        <label>PIDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Posted_to_Opportunities__c</fullName>
        <label>Posted to Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <description>Alfresco content published date.Format for date is yyyy-mm-dd hh:mm:ss</description>
        <label>Publish Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role_Based_Development__c</fullName>
        <label>Role Based Development</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_to_Market__c</fullName>
        <description>Indicates the market introduction of the associated products.</description>
        <label>Route to Market</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SE_Tags_Additional_Info_1__c</fullName>
        <label>SE Tags Additional Info 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SE_Tags_Additional_Info_2__c</fullName>
        <label>SE Tags Additional Info 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SE_Tags__c</fullName>
        <description>Tags and keywords from Alfresco that were created by the author of the content item.</description>
        <inlineHelpText>Author tags</inlineHelpText>
        <label>SE Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>The targeted location for the content item's associated offering.</description>
        <label>Site</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solutions__c</fullName>
        <label>Solutions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Persona_Additional_Info_1__c</fullName>
        <label>Target Persona Additional Info 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Persona__c</fullName>
        <label>Target Persona (Sellers)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Sales_Motion__c</fullName>
        <description>The targeted stage of the sales process to use the content item.</description>
        <label>Target Sales Motion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <description>The targeted theatre location for the content item's associated offering.</description>
        <label>zzTheater_Old</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Theatre_picklist__c</fullName>
        <label>Theater</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thought_Leadership__c</fullName>
        <label>Thought Leadership</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>